--- a/W2D4_Rangers121_Notes+(1).ipynb
+++ b/W2D4_Rangers121_Notes+(1).ipynb
@@ -1542,17 +1542,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square footage of the house is: 50.0 square feet\n"
+     ]
+    }
+   ],
+   "source": [
+    "import calculations \n",
+    "\n",
+    "choice = input(\"Choose calculation (1 for square footage, 2 for circumference): \")\n",
+    "\n",
+    "if choice == '1':\n",
+    "    length = float(input(\"Enter the length of the house: \"))\n",
+    "    width = float(input(\"Enter the width of the house: \"))\n",
+    "    square_footage = calculations.calculate_square_footage(length, width)\n",
+    "    print(f\"The square footage of the house is: {square_footage} square feet\")\n",
+    "elif choice == '2':\n",
+    "    radius = float(input(\"Enter the radius of the circle: \"))\n",
+    "    circumference = calculations.calculate_circumference(radius)\n",
+    "    print(f\"The circumference of the circle is: {circumference} units\")\n",
+    "else:\n",
+    "    print(\"Invalid choice\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1568,6 +1585,57 @@
     "6) Upon quiting the program, print out all items in the user's list <br>\n",
     "</p>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickle has been added to the cart.\n",
+      "Pickle has been removed from the cart.\n",
+      "Your cart is empty.\n",
+      "Your cart is empty.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from shopping_cart import Cart\n",
+    "\n",
+    "def get_item():\n",
+    "    return input(\"Type what item you would like to purchase: \")\n",
+    "\n",
+    "def start_cart():\n",
+    "    cart = Cart()\n",
+    "    while True:\n",
+    "        action = input(\"What would you like to do? (Show/Add/Remove/Exit): \").lower()\n",
+    "        if action == 'add':\n",
+    "            item = get_item()\n",
+    "            cart.add(item)\n",
+    "        elif action == 'show':\n",
+    "            cart.show()\n",
+    "        elif action == 'remove':\n",
+    "            item_to_remove = input(\"Which item would you like to remove? \")\n",
+    "            cart.remove(item_to_remove)\n",
+    "        elif action == 'exit':\n",
+    "            break\n",
+    "        else:\n",
+    "            print('Invalid input! Please type one of \"Show\", \"Add\", \"Remove\", or \"Exit\"')\n",
+    "    cart.show()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    start_cart()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1590,5 +1658,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
